--- a/Angular/online-store-front/src/app/Components/game-item/game-item.component.css
+++ b/Angular/online-store-front/src/app/Components/game-item/game-item.component.css
@@ -1,9 +1,9 @@
 .image-item{
     width: 300px;
     height: 480px;
-    background-color: aqua;
     margin: 20px;
     padding: 20px;
+    border: 1px solid black;
 }
 
 .image-item img{
