--- a/Angular/online-store-front/src/app/app.component.html
+++ b/Angular/online-store-front/src/app/app.component.html
@@ -1,52 +1,61 @@
-<div class="container-fluid">
-  <div class="row-wrapper">
-    <div class="left-header">
-      <a class="header-item" routerLink="/Main" routerLinkActive="active">&nbsp;Home | </a>
-      <a class="header-item" routerLink="/About" routerLinkActive="active">&nbsp;About Us | </a>
-      <a class="header-item" routerLink="/Career" routerLinkActive="active">&nbsp;Career</a>
-    </div>
-    <div class="right-header">
-      <a class="header-item" routerLink="/Support" routerLinkActive="active">&nbsp;Support | </a>
-      <a class="header-item" routerLink="/Contucts" routerLinkActive="active">&nbsp;Contuct us |</a>
-      <a class="header-item" routerLink="/OnlineSupport" routerLinkActive="active">&nbsp;Online Support |</a>
-      <a class="header-item" routerLink="/Security" routerLinkActive="active">&nbsp;Security Information</a>
-    </div>
-  </div>
-  <div class="login-wrapper">
-    <h1>Gamestore</h1>
-    <div class="login-btn-group">
-      <button class="support-login">Support login</button>
-      <button class="client-login">Client login</button>
-    </div>
-  </div>
-  <div class="flex-container">
-    <div class="nav-menu">
-      <a routerLink="/Games" routerLinkActive="Active">Games</a>
-      <a routerLink="/Genres" routerLinkActive="Active">Genres</a>
-      <a routerLink="/Publishers" routerLinkActive="Active">Publishers</a>
-      <a routerLink="/Orders" routerLinkActive="Active">Orders</a>
-      <a routerLink="/Bucket" routerLinkActive="Active">My bucket</a>
-    </div>
-  </div>
-  <div class="slogans">
-    <p class="first-slogan">
-      What can make your life easirer?
-    </p>
-    <p class="second-slogan">
-      <span class="first-part-sentance">EMPOWERED SOLUTIONS</span><br />
-      with SIMPLE PROCESS
-    </p>
-    <img class="pc-image" src="assets/images/macbookpro.png" alt="pc-image">
-  </div>
-
-  <router-outlet></router-outlet>
-
-  <div class="pre-footer">
-    <div class="get-in-touch">
-      <div class="get-in-header">
-          <img src="/assets/images/envelope.png" alt="envelope">
-          <p>GET IN TOUCH</p>    
+<div class="wrapper">
+  <div class="container-fluid">
+    <div class="top-row-wrapper">
+      <div class="left-header">
+        <a class="header-item" routerLink="/Main" routerLinkActive="active">&nbsp;Home | </a>
+        <a class="header-item" routerLink="/About" routerLinkActive="active">&nbsp;About Us | </a>
+        <a class="header-item" routerLink="/Career" routerLinkActive="active">&nbsp;Career</a>
       </div>
+      <div class="right-header">
+        <a class="header-item" routerLink="/Support" routerLinkActive="active">&nbsp;Support | </a>
+        <a class="header-item" routerLink="/Contucts" routerLinkActive="active">&nbsp;Contuct us |</a>
+        <a class="header-item" routerLink="/OnlineSupport" routerLinkActive="active">&nbsp;Online Support |</a>
+        <a class="header-item" routerLink="/Security" routerLinkActive="active">&nbsp;Security Information</a>
+      </div>
+    </div>
+    <div class="login-wrapper">
+      <h1>Gamestore</h1>
+      <div class="login-btn-group">
+        <button class="support-login" (click)="SupportLogin()">Support login</button>
+        <button class="client-login" (click)="ClientLogin()">Client login</button>
+      </div>
+    </div>
+    <div class="flex-container">
+      <div class="row">
+        <div class="nav-menu">
+          <a routerLink="/Games" routerLinkActive="Active">Games</a>
+          <a routerLink="/Genres" routerLinkActive="Active">Genres</a>
+          <a routerLink="/Publishers" routerLinkActive="Active">Publishers</a>
+          <a routerLink="/Orders" routerLinkActive="Active">Orders</a>
+          <a routerLink="/Bucket" routerLinkActive="Active">My bucket</a>
+        </div>
+      </div>
+    </div>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="slogans">
+          <div class="slogan-text">
+            <p>What can make your life easirer?</p>
+            <p>
+              EMPOWERED SOLUTIONS<br />
+              with SIMPLE PROCESS
+            </p>
+          </div>
+          <div class="pc-wrapper">
+            <img class="pc-image" src="assets/images/macbookpro.png" alt="pc-image">
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <router-outlet class="outlet"></router-outlet>
+
+    <div class="pre-footer">
+      <div class="get-in-touch">
+        <div class="get-in-header">
+          <img src="/assets/images/envelope.png" alt="envelope">
+          <p>GET IN TOUCH</p>
+        </div>
         <form class="in-touch-form" action="">
           <label for="">Name:</label>
           <input type="text">
@@ -57,41 +66,61 @@
           <br>
           <button type="submit">Submit</button>
         </form>
-    </div>
+      </div>
 
-    <div class="twitter-updates">
-      <div class="twitter-header">
+      <div class="twitter-updates">
+        <div class="twitter-header">
           <img src="/assets/images/twitter.png" alt="envelope">
           <p>TWITTER UPDATES</p>
+        </div>
+        <div class="twitter-body">
+          <ul class="twitter-news">
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, ratione.</li>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, ratione.</li>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, ratione.</li>
+          </ul>
+          <button type="submit" (click)="FollowTwitter()">Follow us</button>
+        </div>
       </div>
-      <table class="twitter-news-table">
-        <tr>first news</tr>
-        <hr>
-        <tr>second news</tr>
-        <hr>
-        <tr>third news</tr>
-      </table>
+
+      <div class="from-blog">
+        <div class="blog-header">
+          <img src="/assets/images/waves.png" alt="envelope">
+          <p>FROM THE BLOG</p>
+        </div>
+        <div class="blog-body">
+          <ul class="blog-news">
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, ratione.</li>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, ratione.</li>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, ratione.</li>
+          </ul>
+          <button type="submit" (click)="VisitBlog()">Visit Blog</button>
+        </div>
+      </div>
     </div>
 
-  <div class="from-blog">
-    <div class="blog-header">
-        <img src="/assets/images/waves.png" alt="envelope">
-        <p>FROM THE BLOG</p>
+    <div class="footer">
+      <div class="left-block">
+        <p>{{rights}}</p>
+        <p>{{additionalInfo}}</p>
+      </div>
+      <div class="central-block">
+        <p><span>Site Links</span></p>
+        <a href="">Home</a>
+        <a href="">Privacy & Security</a>
+        <a href="">Help</a>
+        <a href="">Personal Finance Blog</a>
+        <a href="">Site Map</a>
+      </div>
+      <div class="right-block">
+        <p><span>Company Information</span></p>
+        <a href="">About What</a>
+        <a href="">Awards</a>
+        <a href="">Reviews</a>
+        <a href="">Testimorials</a>
+        <a href="">Contact</a>
+      </div>
     </div>
-    <table class="blog-news-table">
-        <tr>first news</tr>
-        <hr>
-        <tr>second news</tr>
-        <hr>
-        <tr>third news</tr>
-      </table>
 
   </div>
-</div>
-
-
-  <div class="footer">
-    footer inc@
-  </div>
-
 </div>
